Upgrade to Jakarta EE 10 components (#8038)
Co-authored-by: Steffen Nießing <zuniquex@protonmail.com>